--- a/app_calc_3d/package.json
+++ b/app_calc_3d/package.json
@@ -14,14 +14,18 @@
   "license": "Apache-2.0",
   "dependencies": {
     "cordova-android": "^8.1.0",
-    "cordova-browser": "^6.0.0"
+    "cordova-browser": "^6.0.0",
+    "cordova-plugin-sqlite-2": "^1.0.6"
   },
   "devDependencies": {
-    "cordova-plugin-whitelist": "^1.3.4"
+    "cordova-plugin-whitelist": "^1.3.4",
+    "cordova-sqlite-storage": "git+https://github.com/xpbrew/cordova-sqlite-storage.git"
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-whitelist": {},
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-sqlite-2": {}
     },
     "platforms": [
       "android",
